# hector_math

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  package.xml
.github/: build_docs_on_github.sh
.github/workflows/: ci.yml  documentation.yml  linter.yml
benchmark/: iterators.cpp  iterators_input.h  pr2.urdf  robot_model.cpp  show_iterators.cpp  view_iterator_results.py
en/master/: .buildinfo  genindex.html  hector_math-docs_en_master.epub  index.html  objects.inv  search.html  searchindex.js
en/master/.doctrees/: environment.pickle  index.doctree
en/master/.doctrees/pages/: Containers.doctree  EigenHelpers.doctree  Iterators.doctree  MapOperations.doctree  QuaternionBinning.doctree  Robot.doctree  Shapes.doctree
en/master/pages/: Containers.html  EigenHelpers.html  Iterators.html  MapOperations.html  QuaternionBinning.html  Robot.html  Shapes.html
hector_math/: CMakeLists.txt  package.xml  visualize_binning.py
hector_math/benchmark/: caches.cpp  iterators.cpp  iterators_input.h  polygon.txt  quadrangle_polygon.txt  quaternion_binning_modes.cpp  show_visualization.py  view_iterator_results.py
hector_math/docs/: Doxyfile  build_docs.sh  conf.py  index.rst
hector_math/docs/pages/: Containers.rst  EigenHelpers.rst  Iterators.rst  MapOperations.rst  QuaternionBinning.rst  Robot.rst  Shapes.rst
hector_math/include/hector_math/: types.h
hector_math/include/hector_math/approximations/: trigonometry.h
hector_math/include/hector_math/containers/: bounded_vector.h  quaternion_cache.h  ring_buffer.h
hector_math/include/hector_math/helpers/: bounded_vector.h  eigen.h
hector_math/include/hector_math/iterators/: circle_iterator.h  polygon_iterator.h  rectangle_iterator.h
hector_math/include/hector_math/map_operations/: find_minmax.h
hector_math/include/hector_math/math/: direction_discretization.h  operations.h  quaternion_binning.h
hector_math/include/hector_math/robot/: robot_footprint.h  robot_model.h
hector_math/include/hector_math/shapes/: bounding_box.h
hector_math/include/hector_math/types/: eigen.h  pose.h  pose2d.h  twist.h
hector_math/scripts/: show_iterators.cpp  show_visualization.py  view_iterator_results.py
hector_math/test/: all_tests.test  eigen_tests.h  iterator_test_input.h  showPolygon.py  test_bounded_vector.cpp  test_bounded_vector.test  test_bounding_box.cpp  test_bounding_box.test  test_eigen_helper.cpp  test_eigen_helper.test  test_hector_iterators.cpp  test_hector_iterators.test  test_hector_map_operations.cpp  test_hector_map_operations.test  test_pose.cpp  test_pose.test  test_quaternion_binning.cpp  test_ring_buffer.cpp
hector_math_ros/: CMakeLists.txt  package.xml
hector_math_ros/benchmark/: robot_model.cpp
hector_math_ros/include/hector_math_ros/impl/urdf/: robot_model_impl.hpp
hector_math_ros/include/hector_math_ros/message_conversions/: geometry_msgs.h  gridmap_msgs.h  gridmap_msgs.hpp  robot_model.h
hector_math_ros/include/hector_math_ros/robot/: joint_state_subscriber.h
hector_math_ros/include/hector_math_ros/urdf/: conversions.h  conversions.hpp  robot_footprint.h  robot_model.h
hector_math_ros/test/: test_joint_state_subscriber.cpp  test_joint_state_subscriber.test
include/hector_math/: types.h
include/hector_math/helpers/: bounded_vector.h  eigen.h
include/hector_math/impl/robot/: urdf_robot_model_impl.hpp
include/hector_math/iterators/: circle_iterator.h  polygon_iterator.h
include/hector_math/map_operations/: find_minmax.h
include/hector_math/robot/: robot_footprint.h  robot_model.h  urdf_conversions.hpp  urdf_robot_footprint.h  urdf_robot_model.h
include/hector_math/ros_conversions/: geometry_msgs.h
include/hector_math/shapes/: bounding_box.h
test/: iterator_test_input.h  showPolygon.py  test_hector_iterators.cpp  test_hector_math.cpp  test_pose.cpp
